--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,85 @@ header {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+h1 {
+  font-size: 5vh;
+  font-weight: 300;
+  line-height: 7vh;
+}
+h2 {
+  font-size: 3vh;
+  font-weight: 100;
+  line-height: 5vh;
+}
+#search {
+  padding-top: 2vh;
+  padding-bottom: 1vh;
+
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+#search form {
+  width: 100%;
+}
+
+#search input {
+  line-height: 3vh;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  padding-left: 0vw;
+  margin-left: 1vw;
+}
+#search input[type='search'] {
+  width: 80%;
+  border: solid 1px grey;
+  border-radius: 20px;
+}
+#search input[type='search']:hover {
+  outline: solid 2px black;
+}
+#search input[type='submit'] {
+  width: 10%;
+  background-color: var(--primary-color);
+  border: 0px;
+  color: white;
+  height: 5vh;
+  border-radius: 20px;
+  padding-left: 1vw;
+  padding-right: 1vw;
+  padding-top: 0.5vh;
+  padding-bottom: 0.5 vh;
+  font-weight: 400;
+  font-size: larger;
+  cursor: pointer;
+}
+#search input[type='search']::placeholder {
+  padding-left: 2vw;
+}
+#products_list {
+  padding: 5vh 2vw 2vh 2vw;
+
+  background-color: bisque;
+  display: flex;
+  flex-direction: row;
+  column-gap: 2vw;
+  row-gap: 2vh;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.card {
+  width: 240px;
+  height: 400px;
+  display: block;
   background-color: brown;
 }
+
 footer {
   background-color: burlywood;
 }
