--- a/css/index_style.css
+++ b/css/index_style.css
@@ -104,21 +104,84 @@ h2 {
 }
 #products_list {
   padding: 5vh 2vw 2vh 2vw;
-
-  background-color: bisque;
   display: flex;
   flex-direction: row;
-  column-gap: 2vw;
+  column-gap: 20px;
   row-gap: 2vh;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
 
 .card {
-  width: 240px;
+  max-width: 240px;
   height: 400px;
   display: block;
   background-color: brown;
+  border-radius: 5px;
+  border: 0.25px solid #cacaca;
+  background: #fff;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.card figure img {
+  width: 100%;
+  object-fit: cover;
+}
+.card .text-content {
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  flex: 1 0 0;
+  align-self: stretch;
+  row-gap: 5px;
+}
+.card .text-content .product_name {
+  color: #000;
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.card .text-content .product_description {
+  height: 55px;
+  overflow: hidden;
+  color: #000;
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: left;
+  text-overflow: ellipsis;
+  margin-bottom: 1vh;
+}
+.card .text-content .product_price {
+  color: var(--primary-color);
+  text-align: right;
+  font-family: Roboto;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  align-self: flex-end;
+}
+figure .sell_or_search {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 15px;
+  background-color: var(--primary-color);
+  border-radius: 100px;
+  padding: 5px 10px 5px 10px;
+}
+figure .sell_or_search img {
+  fill: #fff;
 }
 
 footer {
