add transition button

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -30,6 +30,7 @@ header {
   font-size: larger;
   color: var(--primary-color);
   cursor: pointer;
+  transition-duration: 0.4s;
 }
 .header_login input:hover {
   background-color: var(--primary-color);
