--- a/css/index_style.css
+++ b/css/index_style.css
@@ -66,7 +66,7 @@ h2 {
   column-gap: 20px;
   row-gap: 2vh;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-evenly;
 }
 
 .card {
