--- a/css/product_detail_style.css
+++ b/css/product_detail_style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,500,700);
+
 main {
   display: flex;
   flex-direction: column;
@@ -5,99 +7,6 @@ main {
   margin: auto;
 }
 
-.card {
-  display: flex;
-  width: 60vw;
-  max-width: 800px;
-  flex-direction: row;
-  justify-content: center;
-  height: 400px;
-  align-items: center;
-  border-radius: 5px;
-  border: 0.25px solid #cacaca;
-  background: #fff;
-  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.3);
-  position: relative;
-  margin-bottom: 2vh;
-}
-.card figure {
-  width: 40%;
-  max-height: 300px;
-}
-
-.card figure img {
-  width: 100%;
-  max-height: 350px;
-  object-fit: contain;
-}
-.card .text-content {
-  display: flex;
-  padding: 1vh 5vw 1vh 2vw;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: start;
-  flex: 1 0 0;
-  row-gap: 0.5vh;
-}
-.card .text-content .product_name {
-  color: #000;
-  font-family: Roboto;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: normal;
-  text-transform: uppercase;
-}
-.card .text-content .product_description {
-  max-height: 20vh;
-  overflow: hidden;
-  color: #000;
-  font-family: Roboto;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-align: left;
-  text-overflow: ellipsis;
-  margin-bottom: 2vh;
-}
-.card .text-content .product_price {
-  color: var(--primary-color);
-  text-align: right;
-  font-family: Roboto;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-transform: uppercase;
-  justify-self: baseline;
-  align-self: end;
-}
-.sell_or_search {
-  background-color: var(--primary-color);
-  border-radius: 100px;
-  padding: 1vh 2vw 1vh 2vw;
-  display: flex;
-  align-items: center;
-}
-.sell_or_search span {
-  color: #fff;
-}
-.sell_or_search img {
-  width: 25px;
-  padding-right: 0.5vw;
-}
-.footer_card {
-  background-color: var(--primary-color);
-  display: flex;
-  width: 60vw;
-  max-width: 800px;
-  justify-content: space-evenly;
-  padding: 1vh 0 1vh 0;
-  border-radius: 5px;
-  border: 0.25px solid #cacaca;
-  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.3);
-}
 button {
   background-color: white;
   border: solid var(--primary-color) 2px;
@@ -109,7 +18,139 @@ button {
   cursor: pointer;
   transition-duration: 0.4s;
 }
-.delete_product:hover {
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Raleway';
+}
+body .card {
+  width: 50vw;
+  min-width: 800px;
+  position: absolute;
+  background: white;
+  margin: 0 auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  transition: all 0.3s;
+}
+body .card:hover {
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+#header_product_detail {
+  border-bottom: 2px solid #efefef;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+body .card nav {
+  color: #727272;
+  text-transform: uppercase;
+  padding: 20px;
+  border-bottom: 2px solid #efefef;
+  font-size: 12px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+body .card nav svg.heart {
+  height: 24px;
+  width: 24px;
+  float: right;
+  margin-top: -3px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+body .card nav svg.heart:hover {
+  fill: red;
+}
+body .card nav svg.arrow {
+  float: left;
+  height: 15px;
+  width: 15px;
+  margin-right: 10px;
+}
+body .card .photo {
+  padding: 30px;
+  width: 45%;
+  text-align: center;
+  float: left;
+}
+body .card .photo img {
+  max-height: 240px;
+}
+body .card .description {
+  padding: 30px;
+  float: left;
+  width: 55%;
+  border-left: 2px solid #efefef;
+}
+body .card .description h1 {
+  color: #515151;
+  font-weight: 300;
+  padding-top: 15px;
+  margin: 0;
+  font-size: 30px;
+  font-weight: 300;
+}
+body .card .description h2 {
+  color: #515151;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+body .card .description h4 {
+  margin: 1rem;
+  color: #727272;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 12px;
+}
+body .card .description p {
+  font-size: 12px;
+  line-height: 20px;
+  color: #727272;
+  padding: 20px 0;
+  margin: 0;
+}
+body .card .description button {
+  outline: 0;
+  border: 0;
+  /* background: none; */
+  border: 1px solid #d9d9d9;
+  padding: 8px 0px;
+  margin-bottom: 30px;
+  color: #515151;
+  text-transform: uppercase;
+  width: 125px;
+  font-family: inherit;
+  margin-right: 5px;
+  transition: all 0.3s ease;
+  font-weight: 500;
+}
+body .card .description button:hover {
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  cursor: pointer;
+}
+body .card .description button.delete_product:hover {
   background-color: crimson;
-  color: #fff;
+  color: white;
+  cursor: pointer;
+}
+.sell_or_search {
+  background-color: brown;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  border-radius: 100px;
+  filter: invert();
+  margin-right: 2rem;
+}
+.sell_or_search img {
+  height: 30px;
 }
