--- a/css/header.css
+++ b/css/header.css
@@ -13,6 +13,10 @@ header {
   height: 10vh;
 }
 .header_login button {
+  border-radius: 100px;
+  padding: 1vh 2vw 1vh 2vw;
+}
+.header_login button {
   background-color: white;
   border: solid var(--primary-color) 2px;
   font-weight: 400;
