--- a/css/notification.css
+++ b/css/notification.css
@@ -1,10 +1,13 @@
 .notification {
   font-weight: bold;
-  border: solid 1px gray;
-  border-radius: 8px;
+  border-radius: 25px;
   position: absolute;
-  bottom: 100vh;
+  bottom: 0vh;
+  height: 40px;
   width: 100%;
+  padding-left: 3vw;
+  display: flex;
+  align-items: center;
 }
 
 .notification.success {
